[package]
name = "axum_thiserror"
version = "0.1.0"
edition = "2021"
description = "A Rust procedural macro for custom error handling in web applications, enabling the association of specific HTTP status codes with error types."
authors = ["VIAL Sébastien (Shyrogan)"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Shyrogan/axum_thiserror"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8"
thiserror = "1.0.*"
syn = { version = "2.0.48", features = ["full"] }
proc-macro2 = "1.0.78"
quote = "1.0.35"

[lib]
proc-macro = true
